Fixed content bleeding on WP8.1

--- a/src/assets/scss/site/components/_footer.scss
+++ b/src/assets/scss/site/components/_footer.scss
@@ -56,6 +56,7 @@
             &.info {
                 padding: rem-calc(15) rem-calc(30);
                 padding-bottom: rem-calc(9);
+                width:100%;
             }
             &.links {
                 font-size: rem-calc(14);
